First html layout

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
         <form>
             <div class="form-group">
-              <label for="exampleFormControlInput1">Email address</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              <label for="formEmail">Email address</label>
+              <input id="formEmail" type="email" class="form-control" placeholder="name@example.com">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlSelect1">Donuts</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <label for="formDonutOrder">Donuts</label>
+              <select id="formDonutOrder" class="form-control">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -27,11 +27,11 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="exampleFormControlTextarea1">Dropoff description</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <label for="formDropoffDesc">Dropoff description</label>
+              <textarea id="formDropoffDesc" class="form-control" rows="3"></textarea>
             </div>
-            <button id='orderFood' class='btn btn-lg btn-primary'>Order Now!</button>
-          </form>
+            <button id='orderSubmit' class='btn btn-lg btn-primary'>Order Now!</button>
+        </form>
 
     </div>
     
