--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label for="formPassword">Password</label>
-                <input id="formPassword" type="text" class="form-control">
+                <input id="formPassword" type="password" class="form-control">
             </div>
             <div class="form-group">
               <label for="formAuth">Auth Code</label>
